2014_15/workspace/.metadata/.plugins/org.eclipse.cdt.ui/WPILib Test.build.log
13:58:19 **** Incremental Build of configuration Debug for project WPILib Test ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\FRC_2013/wpilib/cpp/current/include" "-IC:\\Users\\FRC_2013\\workspace\\WPILib Test\\src" -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Robot.o" "..\\src\\Robot.cpp" 
..\src\Robot.cpp:10:9: error: declaration of 'drive IronLions::drive' [-fpermissive]
   drive drive;
         ^
In file included from ..\src\Robot.cpp:4:0:
..\src\drive.h:5:7: error: changes meaning of 'drive' from 'class drive' [-fpermissive]
 class drive {
       ^
..\src\Robot.cpp: In constructor 'IronLions::IronLions()':
..\src\Robot.cpp:22:10: error: no matching function for call to 'drive::drive(int, int, int, int, int, int, int, int)'
   xbox2(1)
          ^
..\src\Robot.cpp:22:10: note: candidate is:
In file included from ..\src\Robot.cpp:4:0:
..\src\drive.h:7:2: note: drive::drive(uint32_t, uint32_t, uint32_t, uint32_t)
  drive (uint32_t channel1, uint32_t channel2, uint32_t channel3, uint32_t channel4);
  ^
..\src\drive.h:7:2: note:   candidate expects 4 arguments, 8 provided
..\src\Robot.cpp: In member function 'virtual void IronLions::TeleopPeriodic()':
..\src\Robot.cpp:44:8: warning: unused variable 'A_button' [-Wunused-variable]
   bool A_button = xbox1.GetRawButton(1);
        ^

13:58:21 Build Finished (took 2s.12ms)

